--- a/css/style.css
+++ b/css/style.css
@@ -123,8 +123,7 @@
 .block {
     /* width: 100%;
     max-width: 876px; */
-    /* max-height: 89px; */
-    /* height: 100%; */
+    height: 89px;
     padding: 13px 13px;
     margin-top: 39px;
     display: flex;
@@ -134,6 +133,91 @@
     opacity: 0.8;
     display: flex;
     align-items: center;
+}
 
+
+/* SECTION INFORMATION */
+
+.section-info {
+    width: 100%;
+    margin-top: 178px;
+    margin-bottom: 178.5px;
+    padding-top: 29px;
+    /* background-color: rgba(0, 0, 0, 0.2); */
+    height: 293.40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.box-info{
+    max-width: 369px;
+    width: 100%;
+    /* border: 2px solid blue; */
+    display: flex;
+    flex-direction: column;
+    padding:0 26px;
+}
+.box-info h5 {
+    font-size: 24px;
+    font-family: 'Proxima Nova Alt';
+    font-weight: 700;
+    line-height: 32px;
+    color: #0F0F0F;
+    margin-bottom: 19px;
+}
+.box-info p {
+    font-size: 20px;
+    line-height: 27px;
+    color: #0F0F0F;
+}
+
+
+.box-logos {
+    width: 103px;
+    height: 97px;
+    margin-bottom: 11px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+/* SECTION DESTINATIONS */
+
+.section-title {
+    font-size: 40px;
+    color: #000;
+    font-weight: bold;
+    font-family: 'Proxima Nova Alt';
+    line-height: 53px;
+    text-align: center;
+    margin-bottom: 79px;
+}
+.menu-box {
+    max-width: 1201.5px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.menu {
+    /* display: flex; */
+    flex-wrap: nowrap;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1201.5px;
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    margin-bottom: 64.5px;
+}
+.menu li {
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 35px;
+    letter-spacing: 0.33px;
+    color: #000;
 
 }
