--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@
     display: flex;
     flex-direction: column;
     padding:0 26px;
+    box-shadow: 10px 40px 50px #E5E9F6;
 }
 .box-info h5 {
     font-size: 24px;
@@ -183,13 +184,17 @@
 }
 
 /* SECTION DESTINATIONS */
+.destinations {
+    background-color: #F1FAFF;
+    /* background-color: #163235; */
+}
 
 .section-title {
     font-size: 40px;
     color: #000;
     font-weight: bold;
     font-family: 'Proxima Nova Alt';
-    line-height: 53px;
+    /* line-height: 53px; */
     text-align: center;
     margin-bottom: 79px;
 }
@@ -220,4 +225,100 @@
     letter-spacing: 0.33px;
     color: #000;
 
+}
+.tours {
+    flex-wrap: wrap;
+  
+}
+.tour-box {
+    max-width: 552px;
+    width: 100%;
+    
+
+}
+.icons-price {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tour-box img {
+    width: 100%;
+}
+.tour-box h2 {
+    font-size: 38px;
+    line-height: 51px;
+    font-weight: 600;
+    font-family: 'Proxima Nova Alt';
+    color: #163235;
+    margin: 11px 0 14px;
+}
+.tour-box p {
+    font-size: 26px;
+    line-height: 35px;
+    color: #163235;
+    max-width: 552px;
+    width: 100%;
+    height: 66px;
+    overflow: hidden;
+    letter-spacing: -0.2px;
+
+}
+.icons-main-box {
+    max-width: 125px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+ 
+}
+.icons-box {
+    background-color: #1C4961;
+    width: 33px;
+    height: 33px;
+    /* height: 33px; */
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+}
+.icon3 {
+    max-width: 21.82px;
+    width: 100%;
+}
+.icon2 {
+    max-width: 22.81px;
+    width: 100%;
+}
+.icon1 {
+    max-width: 17.06px;
+    width: 100%;
+}
+
+.icons-price {
+margin: 18px  0 19px;
+align-items: center;
+display: flex;
+justify-content: space-between;
+}
+.price {
+    font-size: 31px;
+    line-height: 37px;
+    font-weight: 600;
+    font-family: 'Proxima Nova Alt';
+}
+.kms-night {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+.kms {
+    text-align: left;
+    font-size: 22px;
+    color: #163235;
+
+}
+
+.night {
+    text-align: right;
+    font-size: 22px;
+    color: #163235;
 }
