--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,14 @@
 .flex {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;    
 }
 .main-header {
     width: 100%;
+    background-color: white;
+    position: fixed;
+    z-index: 999;
+    top: 0;
     justify-content: space-between;
     align-items: center;
 }
@@ -59,11 +63,14 @@
     /* max-width: 1780px; */
     width: 100%;
     position: relative;
+    margin-top: 95px;
+
 }
 .cover img {
     width: 100%;
 }
 .absolute-cover {
+   
     width: 100%;
     height: 100%;
     position: absolute;
@@ -321,4 +328,16 @@ justify-content: space-between;
     text-align: right;
     font-size: 22px;
     color: #163235;
+}
+
+/* SECTION BLOGS */
+
+.blogs {
+    font-size: 40px;
+    font-weight: bold;
+    color: black;
+    line-height: 48px;
+    text-transform: capitalize;
+    text-align: center;
+    
 }
