--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@
 /* SECTION DESTINATIONS */
 .destinations {
     background-color: #F1FAFF;
+    padding-bottom: 91.5px;
     /* background-color: #163235; */
 }
 
@@ -339,5 +340,76 @@ justify-content: space-between;
     line-height: 48px;
     text-transform: capitalize;
     text-align: center;
+    margin-top: 172.5px;
     
+}
+.main-guide {
+    
+
+  
+
+}
+.main-guide-boxes {
+    max-width: 1780px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 73px;
+
+}
+.guide-boxes {
+    position: relative;
+    
+}
+.guide-boxes img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+.guide-boxes:nth-child(1) {
+    max-width: 965px;
+    width: 100%;
+}
+.guide-boxes:nth-child(2) {
+    max-width: 785px;
+    width: 100%;
+}
+
+
+.absolute-cover-title {
+
+   /* background-color: #000; */
+    /* width: 100%; */
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.kili-text{
+    font-size: 50px;
+    color: #ffffff;
+    line-height: 61px;
+    font-family: 'Proxima Nova Alt';
+    font-weight: bold;
+
+   
+}
+.travel-text {
+    color: #ffffff;
+    font-size: 35px;
+    font-weight: bold;
+    font-family: 'Proxima Nova Alt';
+
+}
+.absolute-cover2 {
+   
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0,0, 0.3);
 }
