--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,8 @@ justify-content: space-between;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    padding-top: 65.7px;
+    margin-top: 73px;
 }
 .customer-text {
     max-width: 712px;
