--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@
     font-family: 'Proxima Nova Alt';
     background-color:#4468E2 ;
     border-radius: 15px;
-    padding: 15px 35px 20px 35px;
+    padding: 15px 35px;
 }
 .block {
     /* width: 100%;
@@ -189,6 +189,8 @@
 .destinations {
     background-color: #F1FAFF;
     padding-bottom: 91.5px;
+    padding-top: 58px;
+
     /* background-color: #163235; */
 }
 
@@ -268,7 +270,7 @@
     line-height: 35px;
     color: #163235;
     max-width: 552px;
-    width: 100%;
+    /* width: 100%; */
     height: 66px;
     overflow: hidden;
     letter-spacing: -0.2px;
@@ -555,6 +557,7 @@ footer {
         width: 100%;
     }
 
+
 }
 @media (max-width: 1536px) {
     .left-guide-box {
@@ -594,6 +597,38 @@ footer {
 }
 
 @media (max-width: 1440px) {
+    .travel {
+        color: #ffffff;
+        text-align: center;
+        font-weight: bold;
+        font-size: 40px;
+        font-family: 'Montserat';
+        text-transform: uppercase;
+    }
+    .block {
+        /* width: 100%;
+        max-width: 876px; */
+        height: 70px;
+        padding: 20px 13px;
+        margin-top: 39px;
+        display: flex;
+        justify-content: space-between;
+        background-color: #ffffff;
+        border-radius: 10px;
+        opacity: 0.8;
+        display: flex;
+        align-items: center;
+    }
+    .explore {
+        color: #ffffff ;
+        font-size: 21px;
+        font-family: 'Proxima Nova Alt';
+        background-color:#4468E2 ;
+        border-radius: 15px;
+        padding: 10px 30px;
+
+    }
+    
     .left-guide-box {
         max-width: 770px;
         width: 100%;
@@ -632,7 +667,7 @@ footer {
         line-height: 35px;
         color: #163235;
         max-width: 552px;
-        width: 100%;
+        /* width: 100%; */
         height: 66px;
         overflow: hidden;
         letter-spacing: -0.2px;
@@ -713,4 +748,8 @@ footer {
 } */
 
 
-
+@media (max-width: 1024px) {
+    .menu-list-item {
+        margin: 10px;
+    }
+}
