--- a/css/style.css
+++ b/css/style.css
@@ -254,12 +254,13 @@
     max-width: 552px;
     width: 30%;
     margin-left: 20px;
+    opacity: 0.8;
 }
 .tour-box:hover{
     background-color: rgb(252, 251, 255, 1);
     /* background: transparent; */
     transition: 0.4s;
-    opacity: 0.5;
+    opacity: 1;
     /* width: 100%; */
     /* position: absolute; */
     /* left: 0;
@@ -366,7 +367,6 @@
     max-width: 1780px;
     width: 100%;
     display: flex;
-
     align-items: center;
     margin-top: 73px;
     display: flex;
@@ -375,6 +375,12 @@
 
 
 }
+.left-guide-box:hover{
+    opacity: 1;
+} 
+.guide-box:hover{
+    opacity: 1;
+} 
 .left-guide-box img {
     width: 100%;
     height: 100%;
