--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .container {
-    width: 1780px;
+    max-width: 1780px;
     width: 100%;
     margin: 0 auto;
     /* padding: 0 20px; */
@@ -13,9 +13,10 @@
 .main-header {
     width: 100%;
     background-color: white;
-    position: fixed;
+    /* position: fixed; */
     z-index: 999;
     top: 0;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -74,7 +75,7 @@
     /* max-width: 1780px; */
     width: 100%;
     position: relative;
-    margin-top: 95px;
+    /* margin-top: 95px; */
 
 }
 .cover img {
@@ -117,7 +118,7 @@
     transform: translate(-50%, -50%);
 }
 .travel {
-    color: #ffffff;
+    color: white;
     text-align: center;
     font-weight: bold;
     font-size: 50px;
@@ -370,22 +371,20 @@
     align-items: center;
     margin-top: 73px;
     display: flex;
+    justify-content: space-between;
     flex-wrap: nowrap ;
     flex-direction: row;
-
-
 }
-.left-guide-box:hover{
+.left-guide-box:hover {
     opacity: 1;
 } 
-.guide-box:hover{
+.guide-box:hover {
     opacity: 1;
 } 
 .left-guide-box img {
     width: 100%;
     height: 100%;
 }
-
 .guide-boxes img {
     width: 100%;
     height: 100%;
@@ -396,13 +395,11 @@
     width: 122%;
     overflow: hidden;
     position: relative;
-
 }
 .right-guide-box {
     max-width: 785px;
     width: 100%;
     height: 100%;
-
 }
 .guide-boxes {
     max-width: 785px;
