--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .container {
     max-width: 1780px;
-    width: 100%;
+    width: 98%;
     margin: 0 auto;
     /* padding: 0 20px; */
     /* background-color:bisque; */
@@ -207,6 +207,7 @@
     background-color: #F1FAFF;
     padding-bottom: 91.5px;
     padding-top: 58px;
+    padding-right: 10px;
 
     /* background-color: #163235; */
 }
@@ -575,6 +576,14 @@ footer {
         max-width: 700px;
         width: 100%;
     }
+    .destinations {
+        background-color: #F1FAFF;
+        padding-bottom: 91.5px;
+        padding-top: 58px;
+        padding-right: 10px;
+    
+        /* background-color: #163235; */
+    }
 
 
 }
@@ -612,6 +621,14 @@ footer {
         padding: 0 20px;
         padding-top: 65.7px;
         margin-top: 73px;
+    }
+    .destinations {
+        background-color: #F1FAFF;
+        padding-bottom: 91.5px;
+        padding-top: 58px;
+        padding-right: 10px;
+    
+        /* background-color: #163235; */
     }
 }
 
@@ -714,6 +731,14 @@ footer {
         width: 45%;
         margin: 10px;
     }
+    .destinations {
+        background-color: #F1FAFF;
+        padding-bottom: 91.5px;
+        padding-top: 58px;
+        padding-right: 10px;
+    
+        /* background-color: #163235; */
+    }
 
 }
 
@@ -776,13 +801,37 @@ footer {
         width: 45%;
         margin: 10px;
     }
+    .destinations {
+        background-color: #F1FAFF;
+        padding-bottom: 91.5px;
+        padding-top: 58px;
+        padding-right: 10px;
+    
+        /* background-color: #163235; */
+    }
 
 }
 
 
 @media (max-width: 1024px) {
+
     .menu-list-item {
         margin: 10px;
+        font-size: 18px;
+    }
+    .menu-list-item:hover {
+        background-color: #4468E2;
+        /* padding: 25px; */
+        color: #ffffff;
+        border-radius: 5px;
+        /* opacity: 0.5; */
+        /* line-height: 20px; */
+        transition: all 0.5s;
+        transition-delay: 0.2s ;
+        /* transition-timing-function: ease-in; */
+        
+        /* transform: rotate(360deg); */
+    
     }
     .travel {
         color: #ffffff;
@@ -795,9 +844,9 @@ footer {
     .text-cover {
         max-width: 522px;
         width: 100%;
-        height: 98px;
+        height: 64px;
         overflow: hidden;
-        line-height: 33px;
+        line-height: 20px;
         font-weight: normal;
         display: flex;
         justify-content: center;
@@ -857,6 +906,34 @@ footer {
         flex-wrap: wrap;
         justify-content: space-around;
     }
+    .section-title {
+        font-size: 33px;
+        color: #000;
+        font-weight: bold;
+        font-family: 'Proxima Nova Alt';
+        /* line-height: 53px; */
+        text-align: center;
+        margin-bottom: 79px;
+    }
+    .menu li {
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 35px;
+        /* letter-spacing: 0.13px; */
+        color: #000;
+    }
+    .menu {
+        /* display: flex; */
+        flex-wrap: nowrap;
+        display: flex;
+        justify-content: space-between;
+        max-width: 1201.5px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 20px;
+        align-items: center;
+        margin-bottom: 64.5px;
+    }
     .box-info {
         max-width: 340px;
         width: 100%;
@@ -868,4 +945,40 @@ footer {
         box-shadow: 5px 10px 10px #e5e9f6;
         margin-bottom: 25px;
     }
+    .destinations {
+        background-color: #F1FAFF;
+        padding-bottom: 91.5px;
+        padding-top: 58px;
+        padding-right: 10px;
+    
+        /* background-color: #163235; */
+    }
+    .kms-night {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        flex-direction: column;
+        /* height: 100px; */
+       
+    }
+ 
+    .price {
+        font-size: 20px;
+        line-height: 30px;
+        font-weight: 600;
+        font-family: 'Proxima Nova Alt';
+    }
+    .blogs {
+        max-width: 1780px;
+        width: 100%;
+        font-size: 33px;
+        font-weight: bold;
+        color: black;
+        line-height: 48px;
+        text-transform: capitalize;
+        text-align: center;
+        margin-top: 100px;
+        align-items: center;
+
 }
