--- a/css/style.css
+++ b/css/style.css
@@ -1211,4 +1211,233 @@ footer {
         .footer-container p {
             display: none;
         }
+    }
+    @media (max-width: 640px) {
+
+        .menu-list-item {
+            margin: 10px;
+            font-size: 18px;
+        }
+        .menu-list-item:hover {
+            background-color: #4468E2;
+            /* padding: 25px; */
+            color: #ffffff;
+            border-radius: 5px;
+            /* opacity: 0.5; */
+            /* line-height: 20px; */
+            transition: all 0.5s;
+            transition-delay: 0.2s ;
+            /* transition-timing-function: ease-in; */
+            
+            /* transform: rotate(360deg); */
+        
+        }
+        .travel {
+            color: #ffffff;
+            text-align: center;
+            font-weight: bold;
+            font-size: 24px;
+            font-family: 'Montserat';
+            text-transform: uppercase;
+        }
+        .text-cover {
+            max-width: 522px;
+            width: 100%;
+            height: 64px;
+            overflow: hidden;
+            line-height: 20px;
+            font-weight: normal;
+            display: flex;
+            justify-content: center;
+            margin: 0 auto;
+            font-family: 'Proxima Nova Alt';
+            font-size: 18px;
+            color: #ffffff;
+            text-align: center;
+            display: none;
+        }
+        .block {
+                width: 70%;
+                margin: 0 auto;
+            /* max-width: 600px;  */
+            height: 50px;
+            padding: 10px 10px;
+            margin-top: 39px;
+            display: flex;
+            justify-content: space-between;
+            background-color: #ffffff;
+            border-radius: 10px;
+            opacity: 0.8;
+            display: flex;
+            align-items: center;
+            
+        }
+    
+        .block h4 {
+            font-size: 12px;
+        }
+        .block span {
+            font-size: 12px;
+        }
+        .explore {
+            color: #ffffff ;
+            font-size: 14px;
+            font-family: 'Proxima Nova Alt';
+            background-color:#4468E2 ;
+            border-radius: 15px;
+            padding: 5px 10px;
+    
+        }
+        .travel-text {
+            color: #ffffff;
+            font-size: 16px;
+            font-weight: bold;
+            font-family: 'Proxima Nova Alt';
+        }
+        .section-info {
+            width: 90%;
+            margin: 0 auto;
+            margin-top: 98px;
+            margin-bottom: 100px;
+            padding-top: 29px;
+            /* background-color: rgba(0, 0, 0, 0.2); */
+            /* height: 293.40px; */
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+        .section-title {
+            font-size: 33px;
+            color: #000;
+            font-weight: bold;
+            font-family: 'Proxima Nova Alt';
+            /* line-height: 53px; */
+            text-align: center;
+            margin-bottom: 79px;
+        }
+        .menu li {
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 35px;
+            /* letter-spacing: 0.13px; */
+            color: #000;
+        }
+        .menu {
+            /* display: flex; */
+            flex-wrap: nowrap;
+            display: flex;
+            justify-content: space-between;
+            max-width: 1201.5px;
+            width: 100%;
+            margin: 0 auto;
+            padding: 0 20px;
+            align-items: center;
+            margin-bottom: 64.5px;
+        }
+        .box-info {
+            max-width: 340px;
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 0 26px;
+            box-shadow: 5px 10px 10px #e5e9f6;
+            margin-bottom: 25px;
+        }
+        .destinations {
+            background-color: #F1FAFF;
+            padding-bottom: 91.5px;
+            padding-top: 58px;
+            padding-right: 10px;
+        
+            /* background-color: #163235; */
+        }
+        .kms-night {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            flex-direction: column;
+            /* height: 100px; */
+            
+        }
+        
+        .price {
+            font-size: 20px;
+            line-height: 30px;
+            font-weight: 600;
+            font-family: 'Proxima Nova Alt';
+        }
+        .blogs {
+            max-width: 1780px;
+            width: 100%;
+            font-size: 33px;
+            font-weight: bold;
+            color: black;
+            line-height: 48px;
+            text-transform: capitalize;
+            text-align: center;
+            margin-top: 100px;
+            align-items: center;
+        }
+        .tour-box {
+            max-width: 552px;
+            width: 45%;
+            margin-left: 20px;
+            opacity: 0.8;
+        }
+        .main-guide-boxes {
+            /* max-width: 1780px; */
+            width: 100%;
+            display: flex;
+            align-items: center;
+            margin-top: 73px;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
+        .left-guide-box {
+            max-width: 855px;
+            width: 100%;
+            overflow: hidden;
+        }
+        .guide-boxes {
+            max-width: 785px;
+            width: 100%;
+            position: relative;
+        }
+        .guide-boxes:nth-child(2) {
+            max-width: 785px;
+            width: 100%;
+            position: relative;
+        }
+        .travel-text {
+            color: #ffffff;
+            font-size: 30px;
+            font-weight: bold;
+            font-family: 'Proxima Nova Alt';
+        }
+        .main-customers {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 0 20px;
+            padding-top: 65.7px;
+            margin-top: 7px;
+        }
+        .customer-text {
+            max-width: 712px;
+            width: 85%;
+            margin: 10px;
+        }
+        .customer-text:nth-child(2) {
+            margin-top: 90px;
+        }
+        .footer-container p {
+            display: none;
+        }
 }
